--- a/src/style.css
+++ b/src/style.css
@@ -168,20 +168,6 @@
 	background-color: var(--chat-bg);
 }
 
-.chat-scanline::before {
-	content: "";
-	position: absolute;
-	inset: 0;
-	pointer-events: none;
-	background-image: linear-gradient(
-		to bottom,
-		rgb(26 84 39 / 0%) 0,
-		rgb(26 84 39 / 12%) 50%,
-		rgb(26 84 39 / 0%) 100%
-	);
-	background-size: 100% 5px;
-}
-
 @keyframes chat-loading-pulse {
 	0% {
 		opacity: 0.3;
@@ -229,4 +215,37 @@
 
 .chat-scrollbar::-webkit-scrollbar-thumb:hover {
 	background: color-mix(in oklab, var(--chat-glow), white 28%);
+}
+
+.chat-markdown p + p,
+.chat-markdown p + ul,
+.chat-markdown ul + p,
+.chat-markdown ul + ul {
+	margin-top: 0.6rem;
+}
+
+.chat-markdown ul {
+	list-style: disc;
+	padding-left: 1.25rem;
+}
+
+.chat-markdown li + li {
+	margin-top: 0.3rem;
+}
+
+.chat-markdown strong {
+	font-weight: 700;
+}
+
+.chat-markdown em {
+	font-style: italic;
+}
+
+.chat-markdown code {
+	font-family: "IBM Plex Mono", "Fira Code", "JetBrains Mono", monospace;
+	font-size: 0.9em;
+	background: color-mix(in oklab, var(--chat-panel), black 10%);
+	border: 1px solid color-mix(in oklab, var(--chat-line), black 25%);
+	border-radius: 0.25rem;
+	padding: 0.08rem 0.3rem;
 }
